--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -11,6 +11,7 @@
     <div class="main-content">
 
     {{>header}}
+    <p>This site uses data from Mapbox and WeatherStack</p>
     <img class="portrait" src="/img/puppy.png" />
     </div>
     {{>footer}}
